--- a/EventManagement/EventManagement/EventManagement.csproj
+++ b/EventManagement/EventManagement/EventManagement.csproj
@@ -34,4 +34,8 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\ManagementUsers\" />
+  </ItemGroup>
 </Project>
