--- a/EventManagement/EventManagement/EventManagement.csproj
+++ b/EventManagement/EventManagement/EventManagement.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Resources\" />
     <Folder Include="ViewModels\ManagementUsers\" />
   </ItemGroup>
 </Project>
